--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,7 +4,8 @@
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <!-- includes the Braintree JS client SDK -->
-    <script src="https://js.braintreegateway.com/web/3.69.0/js/client.min.js"></script>
+    {{!-- <script src="https://js.braintreegateway.com/web/3.69.0/js/client.min.js"></script> --}}
+    <script src="/client.js"></script>
     <script src="https://js.braintreegateway.com/web/3.69.0/js/data-collector.min.js"></script>
     <script src="https://js.braintreegateway.com/web/3.69.0/js/hosted-fields.min.js"></script>
     
