--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,13 @@ body {
 a {
   color: #00B7FF;
 }
+
+
+.e2e-body {
+  display: flex;
+  flex-direction: row;
+}
+
+#e2e-form {
+  margin-right: 20px;
+}
