--- a/views/e2e_test.hbs
+++ b/views/e2e_test.hbs
@@ -11,11 +11,11 @@
       <form id="e2e-form">
         <label>Order id: </label>
         <p></p>
-        <input type="text" id="e2e-orderId">
+        <input type="text" id="e2e-orderId" value="8522543055">
         <p></p>
         <label>customer session id: </label>
         <p></p>
-        <input type="text" id="e2e-customerSessionId">
+        <input type="text" id="e2e-customerSessionId" value="a1d1a2fe-76ff-4e6f-be19-07dec3d799eb">
         <p></p>
         <input type="submit" id="e2e-start" value="start">
       </form>
