--- a/views/form.hbs
+++ b/views/form.hbs
@@ -1,3 +1,8 @@
+<script src="/client.js"></script>
+<script src="https://js.braintreegateway.com/web/3.69.0/js/data-collector.min.js"></script>
+<script src="https://js.braintreegateway.com/web/3.69.0/js/hosted-fields.min.js"></script>
+<!-- includes jQuery -->
+<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
 <form action="/checkout" id="cardForm" method="post">
   <div class="panel">
     <header class="panel__header">
