--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,13 +5,13 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <!-- includes the Braintree JS client SDK -->
     {{!-- <script src="https://js.braintreegateway.com/web/3.69.0/js/client.min.js"></script> --}}
-    <script src="/client.js"></script>
-    <script src="https://js.braintreegateway.com/web/3.69.0/js/data-collector.min.js"></script>
-    <script src="https://js.braintreegateway.com/web/3.69.0/js/hosted-fields.min.js"></script>
+    {{!-- <script src="/client.js"></script> --}}
+    {{!-- <script src="https://js.braintreegateway.com/web/3.69.0/js/data-collector.min.js"></script> --}}
+    {{!-- <script src="https://js.braintreegateway.com/web/3.69.0/js/hosted-fields.min.js"></script> --}}
     
 
     <!-- includes jQuery -->
-    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
+    {{!-- <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script> --}}
   </head>
   <body>
     {{{body}}}
