--- a/views/form.hbs
+++ b/views/form.hbs
@@ -1,4 +1,4 @@
-<script src="/client.js"></script>
+<script src="https://js.braintreegateway.com/web/3.69.0/js/client.min.js"></script>
 <script src="https://js.braintreegateway.com/web/3.69.0/js/data-collector.min.js"></script>
 <script src="https://js.braintreegateway.com/web/3.69.0/js/hosted-fields.min.js"></script>
 <!-- includes jQuery -->
