--- a/views/form.hbs
+++ b/views/form.hbs
@@ -405,8 +405,10 @@ Media Queries
             startSubmit(hostedFieldsInstance, dataCollectorInstance, threeDSecureInstance, response.nonce);
 
           } else if (liabilityShiftPossible) {
+            startSubmit(hostedFieldsInstance, dataCollectorInstance, threeDSecureInstance, response.nonce);
 
           } else {
+            startSubmit(hostedFieldsInstance, dataCollectorInstance, threeDSecureInstance, response.nonce);
 
           }
         });
